Fix from comments, refactor duplicate code
Signed-off-by: Lilian Houdelet <lhoudelet@oxyl.fr>